-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

12/22/14
    - Fixed fatal bug in toggle_dcline() when pretty-printing results.

12/18/14
    - Fixed fatal bug in case_info() for islands with no generation.


Changes since 5.0b1
-------------------

12/17/14
    - Released version 5.0.

12/16/14
    - Added unsupported functions check_feasibility.m, checklimits.m,
      loss2bus.m,  make_opf_feasible.m, and makeBloss.m to extras/misc.
    - Added section 9 "Miscellaneous MATPOWER Functions" to User's Manual.

12/15/14
    - Added option for case_info() to print to a file. Added case_info()
      tests to t_island().

12/12/14
    - Added code in psse_read() to work around a bug in Matlab 7.3.
    - Added private 'catchme' tag (for internal use only) to have_fcn()
      to detect older versions of Matlab and Octave that do not support
      the 'catch me' syntax in try/catch constructs.
    - Added private 'regexp_split' tag (for internal use only) to
      have_fcn() to detect older versions of Octave that do not support
      the 'split' argument to regexp().
    - Updated to support Ipopt 3.11.x and later, which removed support
      for options.auxdata from the MEX file. Added private
      'ipopt_auxdata' tag (for internal use only) to have_fcn() to
      detect version 3.11.x or later.

12/4/14
    - Added new option 'opf.init_from_mpc' to force some solvers to
      use the starting point supplied in the MATPOWER case to
      initialize the optimization variables for the OPF, instead
      of creating its own starting point. Currently only implemented
      for Ipopt, Knitro and MIPS.
    - INCOMPATIBLE CHANGE: Renamed cdf2matp() to cdf2mpc() and modified