@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.0
 -----------------
 
+1/7/14
+    - Improved detection of GLPK version in mpver() and GLPK
+      availability in have_fcn(), now compatible with GLPK installed
+      by OPTI Toolbox (http://www.i2c2.aut.ac.nz/Wiki/OPTI/).
+
 12/22/14
     - Fixed fatal bug in toggle_dcline() when pretty-printing results.
 
